--- a/JAV/player_template.html
+++ b/JAV/player_template.html
@@ -274,7 +274,7 @@ function getSeriesName() {
 
 // ✅ 改为加载 JSON 数据文件
 function loadSeriesData(seriesName) {
-  const dataUrl = `https://erik7761269084-arch.github.io/-/JAV/2025/${seriesName}_data.json`;
+  const dataUrl = `https://erik7761269084-arch.github.io/-/JAV/AVmenu/${seriesName}_data.json`;
 
   fetch(dataUrl)
     .then(response => {
