--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </script>
   <h2>频道目录首页</h2>
   <p><a href="./AV/index.html">AV</a></p> 
+  <p><a href="./JAV/index.html">JAV</a></p> 
   <p><a href="./video/index.html">video</a></p> 
   <p><a href="./小说频道总目录/index.html">小说频道总目录</a></p> 
   <p><a href="./少女阁/index.html">少女阁</a></p> 
